# code-guardian

./: CHANGELOG.md  COMANDOS_UTILES.sh  CONTRIBUTING.md  INICIO.txt  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RESUMEN_EJECUTIVO.md  STATUS.md  action.yml  codeguardian.yaml.example  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: USER_GUIDE.md
examples/clean-architecture/: README.md  codeguardian.yaml
examples/clean-architecture/src/application/: create_user.py
examples/clean-architecture/src/domain/: user.py
scripts/: run-tests.sh  setup-dev.sh
src/codeguardian/: __init__.py
src/codeguardian/analyzer/: __init__.py  analyzer.py  ast_parser.py  rule_engine.py
src/codeguardian/config/: __init__.py  loader.py  templates.py
src/codeguardian/github/: __init__.py
src/codeguardian/models/: __init__.py  config.py  misalignment.py  violation.py
src/codeguardian/reporters/: __init__.py  console_reporter.py  json_reporter.py
tests/: conftest.py  test_analyzer.py  test_ast_parser.py  test_config_loader.py
